<resources>
    <string name="app_name">ELDROID2</string>
    <string name="first_name">First Name</string>
    <string name="create_student">Create Student</string>
    <string name="current_address">Current Address</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="course">Course</string>
    <string name="add">Add</string>

</resources>